# mail-scraper

./: .env.example  .gitignore  MIGRATION_NOTES.md  PROCUREMENT_WEBAPP.md  README.md  RUNBOOK.md  Vendors List.xlsx  alembic.ini  attachment_downloader.py  decision_preview.py  decision_tree.yml  dump_top_domains.py  extract_deep.py  fetch_config.py  full_ingest_messages.py  graph_client.py  mailbox_audit.py  matrix_rain.py  models.py  parse_pdfs.py  parse_pdfs_batch.py  post_run_summary.py  pyproject.toml  render.yaml  requirements.txt  scraper.py  vendor_map_builder.py  vendor_sample_picker.py
alembic/: env.py
alembic/versions/: 20260223_0001_phase1_schema.py  20260223_0002_checkpoint_progress_cursor.py  20260224_0003_role_graph_foundation.py  20260224_0004_procurement_webapp_core.py  20260224_0005_hybrid_workflow_fields.py  20260225_0006_decision_gate_workflow.py
src/mail_scraper/: __init__.py  attachments.py  cli.py  config.py  db.py  db_schema.py  graph_client.py  logging_utils.py  models.py  operations.py  pipeline_attachments.py  pipeline_ingest.py  sqlite_port.py  webapp.py  webapp_main.py  webapp_ui.py
tests/: test_attachments.py  test_config_mailboxes.py  test_db_schema.py  test_dead_letter_replay.py  test_graph_client.py  test_operations_load_helpers.py  test_pipeline_attachments_paths.py  test_pipeline_ingest_helpers.py
