[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mail-scraper"
version = "0.1.0"
description = "Mailbox ingestion and purchasing workflow analysis toolkit."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.0",
  "beautifulsoup4>=4.11.1",
  "colorama>=0.4.6",
  "httpx>=0.24.0",
  "matplotlib>=3.5",
  "nltk>=3.8",
  "openpyxl>=3.1.2",
  "pandas>=1.5",
  "pdfminer.six>=20240524",
  "pillow>=11.0.0",
  "pydantic>=2.7",
  "pydantic-settings>=2.0.0",
  "pymdptoolbox>=4.0b1,<5.0",
  "pytesseract>=0.3.10",
  "python-docx>=0.8.11",
  "python-dotenv>=1.0",
  "psycopg[binary]>=3.2.0",
  "scikit-learn>=1.2",
  "sqlalchemy>=2.0.0",
  "structlog>=23.1.0",
  "tenacity>=8.2.2",
  "textblob>=0.17",
  "toml>=0.10.2",
  "transformers>=4.30.0",
  "fastapi>=0.116.0",
  "uvicorn>=0.35.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

[project.scripts]
mail-scraper = "mail_scraper.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
